# six_point_two_eight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  chapter-2.md  chapter-3.md  index.html  package.xml  six_point_two_eight.xml
_grunt/: Gruntfile.js  bower.json  package.json
_layouts/: default.html  post.html
_posts/: 2016-02-17-chapter-1.md  2016-02-24-chapter-2.md
_sass/: _layout.scss  _syntax-highlighting.scss
action/: GetPointCloud2.action
data/world/in/: six_point_two_eight_1455530529862151000.pcd  six_point_two_eight_1455530531864202000.pcd  six_point_two_eight_1455530533866293000.pcd  six_point_two_eight_1455530535901744000.pcd  six_point_two_eight_1455530537903766000.pcd  six_point_two_eight_1455530539905884000.pcd  six_point_two_eight_1455530541907932000.pcd  six_point_two_eight_1455530543943418000.pcd  six_point_two_eight_1455530545945427000.pcd  six_point_two_eight_1455530547947542000.pcd  six_point_two_eight_1455530549949577000.pcd  six_point_two_eight_1455530551985064000.pcd  six_point_two_eight_1455530553987103000.pcd  six_point_two_eight_1455530555989171000.pcd  six_point_two_eight_1455530558024658000.pcd  six_point_two_eight_1455530560026694000.pcd  six_point_two_eight_1455530562028726000.pcd  six_point_two_eight_1455530564030808000.pcd  six_point_two_eight_1455530566066297000.pcd
include/six_point_two_eight/: get_point_cloud_2_server.h  make_target_models.h  make_world_models.h  move_base_server.h  point_cloud_2_throttle.h  point_cloud_utilities.h  register_models.h  utilities.h
launch/: make_target_models.launch  make_target_models_in_gazebo.launch  make_world_models.launch  make_world_models_in_gazebo.launch  register_models.launch  register_target_models.launch  register_world_models.launch  turtlebot_driver.launch
src/: .#chapter-4.md  chapter-1.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  p  point_cloud_utilities.cpp  six_point_two_eight.cpp  utilities.cpp
src/resources/: github-markdown-h.html
